<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Administrator.AdminHome">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="253dp"
        android:layout_height="356dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_logout_button"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:text="@string/admin_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/admin_add_new_course_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_add_course"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toStartOf="@+id/admin_edit_course_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/admin_edit_course_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/admin_edit_course"
        app:layout_constraintBottom_toBottomOf="@+id/admin_add_new_course_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/admin_add_new_course_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textAdminMainCourseCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Currently no courses"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/admin_add_new_course_button"
        app:layout_constraintTop_toBottomOf="@+id/textAdminMainInfo"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/textAdminMainInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Something went wrong with info text."
        app:layout_constraintEnd_toEndOf="@+id/textAdminMainCourseCount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textAdminMainCourseCount"
        app:layout_constraintTop_toBottomOf="@+id/admin_add_new_course_button" />


</androidx.constraintlayout.widget.ConstraintLayout>