<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/admin_add_new_course_title"
        app:layout_constraintBottom_toTopOf="@+id/returnAdminHomeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnAdminHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/admin_return_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/adminSaveNewCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/admin_save_new_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/returnAdminHomeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="320dp"
        android:layout_height="429dp"
        android:layout_marginTop="-75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnAdminHomeButton">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Course name:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNewCourseName"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Course code:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNewCourseCode"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/adminNewCourseAddSessionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add session:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNewSession"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last session added:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adminAddCourseFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total sessions:"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/adminAddCourseSessionCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="75dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notes:"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>